# mathgr-py

./: .gitignore  .mcp.json  README.md  pyproject.toml
doc/: manual.md  performance-notes.md
examples/: decomp_example.py  equilateral.py  gauge_trans_df_to_zeta.py  general_presentation.py  newton_gauge.py  second_order_gw_pert.py  second_order_pert.py  second_order_pert_deltaphi_gauge.py  third_order_pert.py  third_order_pert_pm2.py  zeta_gauge_action_from_delta_phi.py
src/mathgr/: __init__.py  adm.py  debug.py  decomp.py  frwadm.py  gr.py  ibp.py  mcp_server.py  mcp_structured.py  rewrite.py  state.py  tensor.py  typeset.py  util.py  util_private.py
tests/: conftest.py  test_adm.py  test_debug.py  test_decomp.py  test_examples.py  test_frwadm.py  test_gr.py  test_ibp.py  test_levicivita_gr.py  test_mcp_server.py  test_package_exports.py  test_rewrite.py  test_state.py  test_tensor_core.py  test_typeset.py  test_util.py  test_util_private.py  test_wolfram_baseline.py
tools/: install_mcp.sh  test.sh
