[project]
name = "mathgr"
version = "0.1.0"
description = "Python/SymPy port of tririver/MathGR."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.27,<2",
    "sympy>=1.13",
]

[project.scripts]
mathgr-mcp = "mathgr.mcp_server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mathgr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
    "slow: full symbolic example ports",
    "wolfram: requires WolframScript oracle",
]
